--- a/style.css
+++ b/style.css
@@ -1,244 +1,424 @@
 @font-face {
-    font-family: "PT-Bold";
-    src: url(assets/fonts/PTSansNarrow-Bold.ttf);
+  font-family: "PT-Bold";
+  src: url(assets/fonts/PTSansNarrow-Bold.ttf);
 }
 @font-face {
-    font-family: "PT-Regular";
-    src: url(assets/fonts/PTSansNarrow-Regular.ttf);
+  font-family: "PT-Regular";
+  src: url(assets/fonts/PTSansNarrow-Regular.ttf);
 }
 @font-face {
-    font-family: "Fira Sans";
-    src: url(assets/fonts/FiraSans-Regular.ttf);
+  font-family: "Fira Sans";
+  src: url(assets/fonts/FiraSans-Regular.ttf);
 }
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
-    font-family: "PT-Regular";
-    line-height: 1.7;
-    font-size: 15px;
+  height: 100vh;
+  font-family: "PT-Regular";
+  line-height: 1.7;
+  font-size: 15px;
 }
 
 nav {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .logo-container {
-    width: 180px;
-    height: 170px;
+  width: 180px;
+  height: 170px;
 }
 
 .logo-container img {
-    width: 100%;
+  width: 100%;
 }
 
 nav ul {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr;
-    list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 1fr;
+  list-style-type: none;
 }
 
 nav ul li a {
-    color: black;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
 /* FOOTER START */
 footer {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer-top {
-    display: flex;
-    flex-direction: column;
-    height: 380px;
-    align-items: center;
-    justify-content: space-evenly;
-    background-color: #82d26e;
+  display: flex;
+  flex-direction: column;
+  height: 380px;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #82d26e;
 }
 
 .footer-top h2 {
-    font-size: 36px;
-    font-weight: 300;
-    color: white;
+  font-size: 36px;
+  font-weight: 300;
+  color: white;
 }
 
 .footer-top h4 {
-    font-size: 18px;
-    letter-spacing: 4px;
-    color: white;
+  font-size: 18px;
+  letter-spacing: 4px;
+  color: white;
 }
 
 .footer-contact {
-    display: flex;
-    flex-direction: row;
-    place-items: center;
-    padding: 10px 15px;
-    gap: 15px;
-    background-color: #A6D697;
+  display: flex;
+  flex-direction: row;
+  place-items: center;
+  padding: 10px 15px;
+  gap: 15px;
+  background-color: #a6d697;
 }
 
 .footer-contact a {
-    font-size: 17px;
-    font-weight: 400;
-    line-height: 1.3em;
-    text-decoration: none;
-    color: black;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.3em;
+  text-decoration: none;
+  color: black;
 }
 
 .footer-contact img {
-    width: 17px;
+  width: 17px;
 }
 
 .footer-mid {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding: 80px 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 80px 30px;
 }
 
 .footer-deets {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .footer-mid h2 {
-    color: #3f3f3f;
-    font-family: "Fira Sans", Sans-serif;
-    font-size: 15px;
-    font-weight: 700;
+  color: #3f3f3f;
+  font-family: "Fira Sans", Sans-serif;
+  font-size: 15px;
+  font-weight: 700;
 }
 
 .footer-mid p {
-    font-size: 20px;
-    font-weight: 300;
-    color: #7a7a7a;
+  font-size: 20px;
+  font-weight: 300;
+  color: #7a7a7a;
 }
 
 .footer-bottom {
-    background-color: #eaeaea;
-    text-align: center;
+  background-color: #eaeaea;
+  text-align: center;
 }
 
 .footer-bottom p {
-    color: #B2A9A3;
-    padding: 28px 0;
+  color: #b2a9a3;
+  padding: 28px 0;
 }
 
 .socials {
-    display: flex;
-    flex-direction: row;
-    place-items: center;
-    gap: 10px;
+  display: flex;
+  flex-direction: row;
+  place-items: center;
+  gap: 10px;
 }
 
 .social-icon:hover {
-    width: 25px;
-    height: 25px;
-    background-color: #3C77BB;
-    border-radius: 5px;
-    transition: ease-in-out;
-    padding: 2px;
+  width: 25px;
+  height: 25px;
+  background-color: #3c77bb;
+  border-radius: 5px;
+  transition: ease-in-out;
+  padding: 2px;
 }
 
 .social-icon img {
-    width: 25px;
+  width: 25px;
 }
 
 /* Services.css  */
 .container {
-    margin: 50px 20px; /* Increase margin to the ends of the screen */
-    text-align: center;
+  margin: 50px 20px; /* Increase margin to the ends of the screen */
+  text-align: center;
 }
 
 .header-text {
-    color: rgb(90, 90, 178);
-    text-align: left;
-    margin-bottom: 30px;
-    margin-left: 80px;
-
+  color: rgb(90, 90, 178);
+  text-align: left;
+  margin-bottom: 30px;
+  margin-left: 80px;
 }
 .header-text h1 {
-    font-size: 90px;
+  font-size: 90px;
 }
 .header-text p {
-    font-size: 22px;
+  font-size: 22px;
 }
 
 .service {
-    display: flex;
-    flex-direction: column;
-    place-items: center;
-    gap: 10px;
-    border-bottom: 1px solid #757575;
-    padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  gap: 10px;
+  border-bottom: 1px solid #757575;
+  padding-bottom: 30px;
 }
 
 .service-img {
-    border-radius: 50%;
-    background-color: #007bff;
-    padding: 30px;
+  border-radius: 50%;
+  background-color: #007bff;
+  padding: 30px;
 }
 
 .service img {
-    width: 90px;
-    height: 90px;
+  width: 90px;
+  height: 90px;
 }
 
 .service-title {
-    font-size: 38px;
-    color: #007bff;
-    margin-bottom: 15px;
-    font-family: 'Fira Sans', sans-serif;
+  font-size: 38px;
+  color: #007bff;
+  margin-bottom: 15px;
+  font-family: "Fira Sans", sans-serif;
 }
 
 .service-description {
-    color: #757575;
-    font-family: 'Fira Sans', sans-serif;
+  color: #757575;
+  font-family: "Fira Sans", sans-serif;
 }
-
 
 .column-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
 }
-
-
 
 /* portfolio.css */
 .image-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
 }
 
 .zoomable {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  transition: transform 0.3s ease;
 }
 
 .zoomed {
-    transform: scale(1.5);
+  transform: scale(1.5);
 }
 
+/* contact */
+.container {
+  position: relative;
+}
+
+.image-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.image-wrapper img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.image-wrapper h1 {
+  position: absolute;
+  bottom: 50px;
+  left: 10px;
+  margin: 0;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.7);
+  font-size: 24px;
+}
+.image-wrapper h1 + p#heading {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  margin: 0;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.7);
+  font-size: 16px;
+}
+.contact-form {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.contact-form h2 {
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  display: block;
+  font-weight: bold;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form-group textarea {
+  resize: vertical;
+}
+
+button[type="submit"] {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: space-between;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.contact-block {
+  flex: 1;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.contact-block h2 {
+  margin-bottom: 10px;
+}
+
+.contact-block a {
+  display: block;
+  margin-top: 10px;
+  text-decoration: none;
+  color: blue;
+}
+
+.contact-block a:hover {
+  text-decoration: underline;
+}
+
+/* about */
+.top {
+  position: relative;
+}
+
+header {
+  background-color: #1332e1;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+}
+
+main {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 24px;
+  color: #333;
+}
+
+p {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+.about,
+.mission,
+.clientele {
+  margin-bottom: 40px;
+}
+
+.about h2,
+.mission h2,
+.clientele h2 {
+  margin-bottom: 10px;
+}
+
+/* testimonials */
+.top img {
+  width: 100%;
+  height: 500px;
+}
+
+.test-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.text-block {
+  width: 500px;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.text-block img {
+  display: block;
+  margin: 0 auto 10px;
+  max-width: 30%;
+}
+
+.text-block h3 {
+  margin-bottom: 10px;
+}
 
 /* responsiveness */
 @media (max-width: 600px) {
-    /* service.css */
-    .service {
-        flex-basis: calc(100% - 30px);
-        margin-right: 0;
-    }
+  /* service.css */
+  .service {
+    flex-basis: calc(100% - 30px);
+    margin-right: 0;
+  }
 }
