--- a/style.css
+++ b/style.css
@@ -23,12 +23,24 @@ body {
   font-size: 15px;
 }
 
+/* HEADER START */
+header {
+  height: 100px;
+  background-color: #27377B;
+}
+
 nav {
   display: flex;
   flex-direction: row;
+  width: 100%;
+  margin-bottom: 30px;
 }
 
-.logo-container {
+.logo {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
   width: 180px;
   height: 170px;
 }
@@ -39,15 +51,51 @@ nav {
 
 nav ul {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
+  place-items: center;
   list-style-type: none;
 }
 
-nav ul li a {
-  color: black;
-  text-decoration: none;
+.left-menu {
+  position: absolute;
+  top: 8%;
+  left: 20%;
+  transform: translateY(-50%);
 }
+
+.right-menu {
+  position: absolute;
+  top: 8%;
+  right: 15%;
+  transform: translateY(-50%);
+}
+
+nav ul li a {
+  display: block;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  line-height: 1;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 15px 0;
+}
+
+nav ul li a:hover {
+  color: #3c77bb;
+  cursor: pointer;
+  border-bottom: 3px solid #82d26e;
+  transition: ease-in-out;
+}
+
+.active {
+  border-bottom: 3px solid #82d26e;
+  color: #3c77bb;
+}
+
+/* HEADER END */
 
 /* FOOTER START */
 footer {
@@ -152,6 +200,8 @@ footer {
 .social-icon img {
   width: 25px;
 }
+
+/* FOOTER END */
 
 /* Services.css  */
 .container {
@@ -345,7 +395,7 @@ button[type="submit"]:hover {
 }
 
 header {
-  background-color: #1332e1;
+  /* background-color: #1332e1; */
   color: #fff;
   text-align: center;
   padding: 20px 0;
