--- a/style.css
+++ b/style.css
@@ -214,20 +214,78 @@ footer {
 .image-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  place-items: center;
   gap: 30px;
+  margin: 60px 130px 30px 130px;
 }
-
-.zoomable {
+.single-image {
+  position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+.single-image:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  transition: opacity 0.3s ease;
+}
+.single-image:hover p{
+  display: block;
+  z-index: 2;
+  transition: z-index 0.3s ease;
+}
+.single-image p{
+  display: none;
+  position: absolute;
+  bottom: 50%;
+  left: 15%;
+  color: #fff;
+  transition: z-index 0.3s ease;
+}
+.zoomable {
+  width: 100%;
+  height: auto;
   object-fit: cover;
   cursor: pointer;
-  transition: transform 0.3s ease;
 }
 
-.zoomed {
-  transform: scale(1.5);
-}
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    top: 15%;
+    left: 15%;
+    width: 70%;
+    height: 70%;
+    background-color: #fff;
+    z-index: 2;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
+  .modal-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    background-color: #757575;
+    border-radius: 5px;
+    padding: 10px;
+  }
+
+
 
 /* contact */
 .container {
