--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ nav {
   transform: translate(-50%);
   width: 180px;
   height: 170px;
+  z-index: 3;
 }
 
 .logo-container img {
@@ -209,6 +210,78 @@ footer {
 
 /* HOME PAGE START */
 
+.banner {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 400px; /* Set your desired height */
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(144, 238, 144, 0.5); /* Light green with transparency */
+  z-index: 1;
+}
+
+.banner-image {
+  width: 100%;
+  height: auto;
+  opacity: 1; /* Initial opacity */
+  transition: opacity 3s ease; /* Fade-in animation duration */
+}
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.prev-button {
+  background-color: #ccc;
+  width: 30px;
+  height: 30px;
+  left: 10px;
+}
+
+.next-button {
+  right: 10px;
+  background-color: #ccc;
+  width: 30px;
+  height: 30px;
+}
+
+.dots {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+.dot {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin: 0 5px;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: #27377B;
+}
+
 .home-services-overview {
   display: flex;
   flex-direction: column;
@@ -365,6 +438,7 @@ footer {
   place-items: center;
   text-align: center;
   gap: 25px;
+  padding: 60px 0;
 }
 
 .home-testimonials-top {
@@ -392,16 +466,59 @@ footer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
+  padding: 50px;
 }
 
 .testimonial-container {
   display: flex;
   flex-direction: column;
-  gap: 35px;
+  position: relative;
+  box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.07);
+  transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+  padding: 0px 35px 20px 35px;
+  gap: 60px;
 }
 
 .avator img {
-  width: 50px;
+  display: inline-block;
+  vertical-align: middle;
+  background-color: white;
+  position: absolute;
+  top: -40px;
+  left: 44%;
+  width: 67px;
+  height: auto;
+  max-width: 100%;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.14);
+}
+
+.profile-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.profile-details h2 {
+  font-size: 25px;
+  font-weight: 300;
+}
+
+.profile-details h5 {
+  color: rgba(0,0,0,0.44);
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.testimonials {
+  margin-bottom: 26px;
+  color: rgba(0,0,0,0.5);
+  font-style: italic;
+  line-height: 1.7;
+  font-size: 15px;
+  font-family: "Fira Sans";
+  text-align: left;
 }
 
 /* HOME PAGE END */
