--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@ footer {
   height: auto;
   opacity: 1; /* Initial opacity */
   transition: opacity 3s ease; /* Fade-in animation duration */
+  z-index: 1;
 }
 .prev-button,
 .next-button {
@@ -246,7 +247,7 @@ footer {
   border: none;
   font-size: 24px;
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
 }
 
 .prev-button {
@@ -268,7 +269,7 @@ footer {
   bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 1;
+  z-index: 2;
 }
 
 .dot {
@@ -534,10 +535,14 @@ footer {
 }
 
 .header-text {
+  position: absolute;
   color: rgb(90, 90, 178);
   text-align: left;
+  bottom: 50px;
+  left: 50px;
   margin-bottom: 30px;
   margin-left: 80px;
+  z-index: 2;
 }
 .header-text h1 {
   font-size: 90px;
