--- a/style.css
+++ b/style.css
@@ -223,7 +223,12 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(144, 238, 144, 0.5); /* Light green with transparency */
+  background-color: rgba(
+    144,
+    238,
+    144,
+    0.5
+  ); /* Light green with transparency */
   z-index: 1;
 }
 
@@ -279,7 +284,7 @@ footer {
 }
 
 .dot.active {
-  background-color: #27377B;
+  background-color: #27377b;
 }
 
 .home-services-overview {
@@ -360,7 +365,7 @@ footer {
 }
 
 .featured-work {
-  background-color: #27377B;
+  background-color: #27377b;
   display: flex;
   flex-direction: column;
   place-items: center;
@@ -375,7 +380,7 @@ footer {
   padding: 15px 20px;
   background-color: #82d26e;
   text-decoration: none;
-  color: #27377B;
+  color: #27377b;
   font-family: "PT-Regular", Sans-serif;
   font-size: 17px;
   font-weight: 400;
@@ -409,7 +414,7 @@ footer {
 }
 
 .featured-top h6 {
-  color: rgba(255,255,255,0.46);
+  color: rgba(255, 255, 255, 0.46);
   font-size: 18px;
   font-weight: 300;
   text-transform: uppercase;
@@ -456,7 +461,7 @@ footer {
 }
 
 .home-testimonials-top h6 {
-  color: rgba(2,2,2,0.46);
+  color: rgba(2, 2, 2, 0.46);
   font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 7px;
@@ -473,13 +478,13 @@ footer {
   display: flex;
   flex-direction: column;
   position: relative;
-  box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.07);
+  box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.07);
   transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
   padding: 0px 35px 20px 35px;
   gap: 60px;
 }
 
-.avator img {
+.avatar img {
   display: inline-block;
   vertical-align: middle;
   background-color: white;
@@ -491,7 +496,7 @@ footer {
   max-width: 100%;
   border: none;
   border-radius: 50%;
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.14);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.14);
 }
 
 .profile-details {
@@ -506,14 +511,14 @@ footer {
 }
 
 .profile-details h5 {
-  color: rgba(0,0,0,0.44);
+  color: rgba(0, 0, 0, 0.44);
   font-size: 16px;
   font-weight: 300;
 }
 
 .testimonials {
   margin-bottom: 26px;
-  color: rgba(0,0,0,0.5);
+  color: rgba(0, 0, 0, 0.5);
   font-style: italic;
   line-height: 1.7;
   font-size: 15px;
@@ -816,10 +821,12 @@ p {
   width: 100%;
 }
 
-.test-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+.all-testimonials {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding: 50px;
+  text-align: center;
 }
 
 .text-block {
