--- a/style.css
+++ b/style.css
@@ -811,6 +811,11 @@ p {
   margin-bottom: 40px;
 }
 
+.bottom-about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .about h2,
 .mission h2,
 .clientele h2 {
@@ -836,6 +841,7 @@ p {
   gap: 20px;
   padding: 50px;
   text-align: center;
+  margin-top: 30px;
 }
 
 .text-block {
