--- a/style.css
+++ b/style.css
@@ -346,7 +346,18 @@ footer {
 
 .service-image-top {
   display: flex;
-  place-items: center;
+  align-items: center;
+  justify-content: center;
+  width: 120px; 
+  height: 120px;
+  border-radius: 50%; 
+  background-color: #007bff;
+  overflow: hidden;
+}
+
+.service-image-top img {
+  width: 90px; 
+  height: 90px; 
 }
 
 .service-details {
