--- a/style.css
+++ b/style.css
@@ -803,21 +803,8 @@ header {
   padding: 20px 0;
 }
 
-h1 {
-  font-size: 36px;
-}
-
-h2 {
-  font-size: 24px;
-  color: #333;
-}
-
-p {
-  font-size: 16px;
-  line-height: 1.6;
-}
-
 .about-content {
+  margin-top: 30px;
   text-align: center;
 }
 
