--- a/style.css
+++ b/style.css
@@ -564,6 +564,10 @@ footer {
 .header-text h1 {
   font-size: 90px;
 }
+.header-text h2 {
+  text-align: center;
+  font-size: 22px;
+}
 .header-text p {
   font-size: 22px;
 }
